--- a/index.html
+++ b/index.html
@@ -1,2 +1,2 @@
 hello word !
-<p><a href="http://www.beian.miit.gov.cn" target="_blank" title="豫ICP备19028289" >豫ICP备19028289</a></p> 
+<p><a href="https://beian.miit.gov.cn" target="_blank" title="豫ICP备19028289" >豫ICP备19028289</a></p> 
